# football_match_prediction

./: .gitignore  LICENSE  SimpleExtended_Strategy.ipynb  create_datasets.py  main.py  preprocessing.py  pyproject.toml
api/: openligadb.py  transfermarkt.py
database/: database.db  dbconn.py  fill_database.py  matches_df.pck  package.json  schema.prisma
evaluation_template/: evaluation.py  model.py  prediction_20251222_202343.csv
evaluation_template/datasets/: TeamMarketValues.csv  test.csv  train.csv
v1/: SimpleExtended_Strategy.ipynb  Simple_Strategy.ipynb  Simple_Strategy2.ipynb  kNN_Strategy.ipynb  preprocessing.py
v2/: data_download.ipynb  data_prep.ipynb  model_building.ipynb  prediction_upload.ipynb
v2.1/: data_prep.ipynb  model_building.ipynb  prediction_upload.ipynb
v3/: data_inspection.ipynb  data_prep.py  model_building.ipynb  model_comparison.ipynb  prediction_upload.ipynb
v3/api/: transfermarkt.py
v4/: .dockerignore  Dockerfile  Dockerfile.caprover  README.md  captain-definition  deploy.sh  docker-compose.yml  evaluation.py  model.py  prediction_copilot_gpt_52.csv  pyproject.toml  run_scheduler.py
v4/artifacts/: away_goals.cbm  home_goals.cbm  market_values.joblib  meta.json  mv_alias_map.json  team_aggs.joblib  team_elo.joblib  team_form.joblib
v4/datasets/: test.csv  train.csv
v4/scripts/: create_datasets.py  data_loader.py  predict.py  scheduler.py  test_scheduler_timing.py  train.py  upload_predictions.py
