[project]
name = "football-match-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=1.25,<2.3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.0.0,<2.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.4.0,<1.7.0",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.5",
]
