[project]
name = "football-match-prediction"
version = "0.1.0"
description = "Football match prediction (Kicktipp scoring)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "catboost>=1.2.7",
  "requests>=2.32.5",
  "python-dotenv>=1.1.1",
  "selenium>=4.35.0",
  "tqdm>=4.67.1",
  "apscheduler>=3.10.0",
]

[tool.uv]
# Keep uv fast and reproducible via uv.lock

